--- a/elements/crew-team-manager-erg/crew-team-manager-erg-create.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-create.html
@@ -72,8 +72,8 @@
             <div id="creator">
                 <form is="iron-form" id="form" method="post" action="/form/handler">
                     <paper-input id="number" label="number" value="{{create.number}}"></paper-input>
-                    <paper-dropdown-menu label="model" value="{{create.model}}">
-                        <paper-listbox slot="dropdown-content" id="model">
+                    <paper-dropdown-menu label="location" value="{{create.model}}">
+                        <paper-listbox slot="dropdown-content" id="location">
                             <paper-item>Home</paper-item>
                             <paper-item>Away</paper-item>
                         </paper-listbox>
