--- a/elements/crew-team-manager-finance/crew-team-manager-finance.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance.html
@@ -148,7 +148,7 @@
                 this.$.toast.open();
             }
 
-            _handleActionCancel(e) {
+            _handleActionCanceled(e) {
                 this._page = 'list';
                 this._toast = 'Cancelled Finance Create';
                 this.$.toast.fitInto = this.$.pages;
