--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-list.html
@@ -152,6 +152,8 @@
                     }
                 }
 
+                console.log('loading boat data');
+
                 this._page = page;
 
             }
