--- a/elements/crew-team-manager-oar/crew-team-manager-oar-list.html
+++ b/elements/crew-team-manager-oar/crew-team-manager-oar-list.html
@@ -152,6 +152,8 @@
                     }
                 }
 
+                console.log('loading oar data');
+
                 this._page = page;
 
             }
