--- a/elements/crew-team-manager-picture/crew-team-manager-picture-list.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture-list.html
@@ -152,6 +152,8 @@
                     }
                 }
 
+                console.log('loading picture data');
+
                 this._page = page;
 
             }
