--- a/elements/crew-team-manager-race/crew-team-manager-race-list.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race-list.html
@@ -152,6 +152,7 @@
                     }
                 }
 
+                console.log('loading race data');
                 this._page = page;
 
             }
