--- a/elements/crew-team-manager-roster/crew-team-manager-roster-list.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-list.html
@@ -144,7 +144,6 @@
             }
 
             _updatePage(dataSplices) {
-                console.log(this._data);
 
                 let page = 'message';
 
@@ -153,6 +152,8 @@
                         page = 'results';
                     }
                 }
+
+                console.log('loading roster data');
                 this._page = page;
 
             }
