--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-list.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-list.html
@@ -167,6 +167,7 @@
                     }
 
                 }
+                console.log('loading regatta data');
 
                 this._page = page;
 
