--- a/elements/crew-team-manager-erg/crew-team-manager-erg-list.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-list.html
@@ -153,6 +153,7 @@
                     }
                 }
 
+                console.log('loading erg data');
                 this._page = page;
 
             }
