--- a/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
@@ -151,6 +151,8 @@
                     }
                 }
 
+                console.log('loading finance data');
+
                 this._page = page;
 
             }
