--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-list.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-list.html
@@ -154,6 +154,7 @@
                     }
 
                 }
+                console.log('loading rigger data');
 
                 this._page = page;
             }
