This commit will
fix the rules so that users can get data and fix the pages so that the entities access the query from the correct path

--- a/elements/crew-team-manager-erg/crew-team-manager-erg-list.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-list.html
@@ -68,7 +68,7 @@
             }
         </style>
 
-        <firebase-query app-name="laborsync-ctm" id="query" path="/ergs" data="{{_data}}">
+        <firebase-query app-name="laborsync-ctm" id="query" path="/teamErgs/{{teamId}}" data="{{_data}}">
         </firebase-query>
 
         <app-header-layout id="layout" has-scrolling-region fullbleed>
@@ -117,7 +117,9 @@
 
                     _data: {
                         type: Object
-                    }
+                    },
+
+                    teamId: String
 
                 }
             }
