--- a/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
@@ -68,7 +68,7 @@
             }
         </style>
 
-        <firebase-query app-name="laborsync-ctm" id="query" path="/finances" data="{{_data}}">
+        <firebase-query app-name="laborsync-ctm" id="query" path="/teamFinances/{{teamId}}" data="{{_data}}">
         </firebase-query>
 
         <app-header-layout id="layout" has-scrolling-region fullbleed>
@@ -115,7 +115,9 @@
 
                     _data: {
                         type: Object
-                    }
+                    },
+
+                    teamId: String
 
                 }
             }
