--- a/elements/crew-team-manager-roster/crew-team-manager-roster-list.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-list.html
@@ -68,7 +68,7 @@
             }
         </style>
 
-        <firebase-query app-name="laborsync-ctm" id="query" path="athletes/" data="{{_data}}">
+        <firebase-query app-name="laborsync-ctm" id="query" path="teamAthletes/{{teamId}}" data="{{_data}}">
         </firebase-query>
 
         <app-header-layout id="layout" has-scrolling-region fullbleed>
@@ -117,7 +117,9 @@
 
                     _data: {
                         type: Object
-                    }
+                    },
+
+                    teamId: String
 
                 }
             }
@@ -146,6 +148,7 @@
             _updatePage(dataSplices) {
 
                 let page = 'message';
+                console.log(dataSplices);
 
                 if (dataSplices) {
                     if (dataSplices.indexSplices[0].object.length) {
@@ -153,7 +156,6 @@
                     }
                 }
 
-                console.log('loading roster data');
                 this._page = page;
 
             }
