--- a/elements/crew-team-manager-app/crew-team-manager-app.html
+++ b/elements/crew-team-manager-app/crew-team-manager-app.html
@@ -43,10 +43,13 @@
 
         <firebase-auth id="auth" app-name="laborsync-ctm" user="{{_firebaseUser}}" status-known="{{_firebaseStatusKnown}}"></firebase-auth>
 
+        <firebase-query app-name="laborsync-ctm" id="query" path="users/{{_userId}}" data="{{_data}}">
+        </firebase-query>
+
         <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
             <crew-team-manager-login id="login"></crew-team-manager-login>
 
-            <crew-team-manager-stage id="stage" on-crew-team-manager-stage-action-logout="_handleActionLogout"></crew-team-manager-stage>
+            <crew-team-manager-stage id="stage" on-crew-team-manager-stage-action-logout="_handleActionLogout" team-id="[[_teamId]]"></crew-team-manager-stage>
 
         </iron-pages>
 
@@ -75,16 +78,19 @@
 
                     _firebaseUser: Object,
 
+                    _userId: String,
 
-                    // behaviors: [Polymer.LazyImportsBehavior]
+                    _data: Object,
 
-
+                    _teamId: String
                 }
             }
 
             static get observers() {
                 return [
-                    '_updatePage(_firebaseStatusKnown, _firebaseUser)'
+                    '_updatePage(_firebaseStatusKnown, _firebaseUser)',
+                    '_dataChanged(_data.splices)'
+
                 ]
             }
 
@@ -102,8 +108,15 @@
 
             }
 
-            _updatePage(firebaseStatusKnown, firebaseUser) {
+            _dataChanged(dataSplices) {
+                if (dataSplices.indexSplices[0].object[8]) {
+                    let data = dataSplices.indexSplices[0].object[8];
+                    this._teamId = data.$val;
 
+                }
+            }
+
+            _updatePage(firebaseStatusKnown, firebaseUser) {
                 if (!firebaseStatusKnown) {
                     return
                 }
@@ -111,10 +124,9 @@
                 let page = 'login';
 
                 if (firebaseUser) {
+                    this._userId = firebaseUser.uid;
                     page = 'stage';
                 }
-
-                console.log(page)
 
                 this.importLazyGroup('lazy').then(function (results) {
                     this._page = page;
