--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet.html
@@ -49,7 +49,7 @@
 
         <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
             <crew-team-manager-fleet-list id="list" menu-hidden$="[[wideLayout]]" on-crew-team-manager-fleet-list-results-action-detail="_handleActionDetail"
-                on-crew-team-manager-fleet-list-action-create="_handleActionCreate">
+                on-crew-team-manager-fleet-list-action-create="_handleActionCreate" team-id="[[teamId]]">
             </crew-team-manager-fleet-list>
 
             <crew-team-manager-fleet-detail id="detail" boat="[[_boat]]" on-crew-team-manager-fleet-detail-action-back="_handleActionBack"
@@ -98,7 +98,9 @@
 
                     _toast: {
                         type: String
-                    }
+                    },
+
+                    teamId: String
                 }
             }
 
