--- a/elements/crew-team-manager-roster/crew-team-manager-roster.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster.html
@@ -49,7 +49,7 @@
 
         <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]" selected-attribute="selected">
             <crew-team-manager-roster-list id="list" menu-hidden$="[[wideLayout]]" on-crew-team-manager-roster-list-results-action-detail="_handleActionDetail"
-                on-crew-team-manager-roster-list-action-create="_handleActionCreate">
+                on-crew-team-manager-roster-list-action-create="_handleActionCreate" team-id="[[teamId]]">
             </crew-team-manager-roster-list>
 
             <crew-team-manager-roster-detail id="detail" athlete="[[_athlete]]" on-crew-team-manager-roster-detail-action-back="_handleActionBack"
@@ -98,7 +98,9 @@
 
                     _toast: {
                         type: String
-                    }
+                    },
+
+                    teamId: String
                 }
             }
 
